# pyramid_robotics

./: README.md
pyramid_cenral/: CMakeLists.txt  package.xml
pyramid_central/: CMakeLists.txt  package.xml
pyramid_central/cfg/: SlidingModeController.cfg  SystemCommander.cfg  TrajectoryGenerator.cfg
pyramid_central/include/pyramid_central/: common.h  configurations.h  parameters.h  sliding_mode_controller.h  system_commander.h  system_reconfiguration.h  tension_distributor.h  tension_optimizer.h
pyramid_central/params/: sliding_mode_controller.yaml  system_controller.yaml
pyramid_central/src/: system_reconfiguration.cpp
pyramid_central/src/nodes/: sliding_mode_control_node.cpp  sliding_mode_control_node.h  system_commander_node.cpp  system_commander_node.h  tension_optimizer_node.cpp  trajectory_commander_node.cpp  trajectory_commander_node.h
pyramid_control/: CMakeLists.txt  package.xml
pyramid_control/cfg/: SlidingModeController.cfg  SystemParameters.cfg  TrajectoryGenerator.cfg  WinchPosition.cfg
pyramid_control/include/pyramid_control/: actuator_controller.h  common.h  common_central.h  configurations.h  motor_speed_controller.h  observer.h  parameters.h  sliding_mode_controller.h  system_reconfiguration.h  tension_optimizer.h
pyramid_control/params/: sliding_mode_controller.yaml  tether_config.yaml
pyramid_control/src/nodes/: commander_node.cpp  commander_node.h  sliding_mode_control_node.cpp  sliding_mode_control_node.h  trajectory_commander_node.cpp  trajectory_commander_node.h
pyramid_control/tether_control/: CMakeLists.txt  package.xml
pyramid_control/tether_control/include/tether_control/: simple_tension_controller.h  simple_tensions_controller.h  tension_controller.h
pyramid_control/tether_control/src/nodes/: simple_tensions_controller_node.cpp  simple_tensions_controller_node.h
pyramid_control/uav_control/: CMakeLists.txt  package.xml
pyramid_control/uav_control/include/uav_control/: common.h  configurations.h  conversions.h  get_params.h  motor_speed_controller.h  parameters.h
pyramid_control/uav_control/src/nodes/: motor_speed_conroller_node.cpp  motor_speed_conroller_node.h  motor_speed_controller_node.cpp  motor_speed_controller_node.h
pyramid_control/ugv_control/: CMakeLists.txt  package.xml
pyramid_control/ugv_control/launch/: pyramid_simple_control.launch
pyramid_control/ugv_control/script/: pyramid_teleop_keyboard.py
pyramid_control/ugv_control/src/: pyramid_ugv_teleop_key.cpp
pyramid_description/: CMakeLists.txt  package.xml
pyramid_description/launch/: pyramid_mav.launch  pyramid_mav_hovering_example.launch
pyramid_description/tether_description/: CMakeLists.txt  creat_tether.py  package.xml
pyramid_description/tether_description/launch/: display_xacro.launch  gazebo.launch  gazebo_xacro.launch
pyramid_description/tether_description/script/: creat_tether.py
pyramid_description/tether_description/urdf/: massless_rigid_tether.xacro  tether.xacro  tether_fragment.xacro
pyramid_description/tether_description/urdf/jinja/: lumped_mass_tether_fragment.xacro  massless_rigid_tether.xacro
pyramid_description/uav_description/: CMakeLists.txt  package.xml
pyramid_description/uav_description/launch/: pyramid_mav_hovering_example.launch
pyramid_description/uav_description/src/: pyramid_hovering_example.cpp
pyramid_description/uav_description/urdf/: pyramid_firefly.xacro  pyramid_firefly_base.xacro  pyramid_mav_generic_odometry_sensor.gazebo  pyramid_mav_with_wind_gust.gazebo  pyramid_multirotor_base.xacro  pyramid_pelican.xacro
pyramid_description/ugv_description/: CMakeLists.txt
pyramid_description/ugv_description/launch/: ugv_gazebo_xacro.launch  ugv_xacro.launch
pyramid_description/ugv_description/launch/pyramid_mp_500/: pyramid_mp_500_simulation.launch  pyramid_spawn_mp_500.launch
pyramid_description/ugv_description/urdf/mp_500/: mp_500.urdf.xacro  mp_500_tether.urdf.xacro
pyramid_description/ugv_description/urdf/mp_500/xacros/: mp_500_caster_wheel.xacro  mp_500_fixed_wheel_left.xacro  mp_500_fixed_wheel_right.xacro  mp_500_gazebo.xacro  mp_500_tether_end.xacro
pyramid_description/urdf/: pyramid_component_snippets.xacro  pyramid_mav_generic_odometry_sensor.gazebo  pyramid_mav_with_wind_gust.gazebo  pyramid_multirotor_base.xacro  pyramid_pelican.xacro  pyramid_pelican_base.xacro  pyramid_robotics.xacro  pyramid_winch.xacro
pyramid_description/world_description/: CMakeLists.txt  package.xml
pyramid_description/world_description/launch/: world_gazebo_xacro.launch
pyramid_description/world_description/urdf/: uav_2_ugv.xacro
pyramid_evaluation/: CMakeLists.txt  package.xml
pyramid_evaluation/cfg/: DisturbanceGenerator.cfg
pyramid_evaluation/launch/: simulation.launch
pyramid_evaluation/src/nodes/: disturbance_gen_node.cpp  disturbance_gen_node.h
pyramid_gazebo/: CMakeLists.txt  package.xml
pyramid_gazebo_plugins/: CMakeLists.txt  package.xml
pyramid_gazebo_plugins/include/pyramid_gazebo_plugins/: gazebo_disturbance_plugin.h  gazebo_external_force_plugin.h  gazebo_psuedo_tether_plugin.h  gazebo_tensions_plugin.h  gazebo_winch_plugin.h
pyramid_gazebo_plugins/src/: gazebo_disturbance_plugin.cpp  gazebo_external_force_plugin.cpp  gazebo_psuedo_tether_plugin.cpp  gazebo_tensions_plugin.cpp  gazebo_winch_plugin.cpp  rover.cpp
pyramid_msgs/: CMakeLists.txt  package.xml
pyramid_msgs/include/: pyramid_eigen_msgs.h
pyramid_msgs/include/pyramid_msgs/: common.h  conversions.h  default_topics.h  pyramid_eigen_msgs.h
pyramid_msgs/msg/: Positions.msg  Tensions.msg
pyramid_viz/: CMakeLists.txt  package.xml
pyramid_viz/rviz/: pyramid.rviz  rev.rviz  simulation.rviz
tether_description/: CMakeLists.txt  creat_tether.py  package.xml  tether.csv
uav_description/: CMakeLists.txt  package.xml
uav_description/launch/: pyramid_mav_with_wind_gust.launch  pyramid_spawn_mav.launch
uav_description/src/: pyramid_hovering_example.cpp
uav_description/urdf/: pyramid_firefly.xacro  pyramid_firefly_base.xacro  pyramid_mav_with_wind_gust.gazebo  pyramid_pelican_base.xacro
(+56 files in other folders)
