<?xml version="1.0"?>
<package format="2">
  <name>pyramid_evaluation</name>
  <version>0.0.0</version>
  <description>The pyramid_evaluation package</description>

  <maintainer email="satoshi.ota928@gmail.com">Ota Satoshi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>pyramid_msgs</depend>

</package>
