<?xml version="1.0"?>
<package format="2">
  <name>pyramid_msgs</name>
  <version>0.0.0</version>
  <description>The pyramid_msgs package</description>

  <maintainer email="satoshi.ota928@gmail.com">Ota Satoshi</maintainer>
  <author>Ota Satoshi</author>
  <license>MIT License</license>

  <url type="website">http://wiki.ros.org/pyramid_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
