<?xml version="1.0"?>
<package format="2">
  <name>ugv_control</name>
  <version>0.0.0</version>
  <description>The ugv_control package</description>

  <maintainer email="satoshi.ota928@gmail.com">Ota Satoshi</maintainer>
  <author>Ota Satoshi</author>
  <license>MIT License</license>

  <url type="website">http://wiki.ros.org/pyramid_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

</package>
