<?xml version="1.0"?>
<package format="2">
  <name>tether_description</name>
  <version>0.0.0</version>
  <description>The tether_description package</description>

  <maintainer email="satoshi.ota928@gmail.com">Ota Satoshi</maintainer>
  <author>Ota Satoshi</author>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
