<?xml version="1.0"?>
<package format="2">
  <name>world_description</name>
  <version>0.0.0</version>
  <description>The world_description package</description>

  <maintainer email="satoshi.ota928@gmail.com">Ota Satoshi</maintainer>
  <author>Ota Satoshi</author>
  <license>MIT License</license>

  <url type="website">http://wiki.ros.org/pyramid_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
